...
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_secure_margin_normal">

    <TextView
        android:id="@+id/textview_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/today"/>

    <TextView
...
